# easytelemetry

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  bumpver.toml  pyproject.toml
.github/: pull_request_template.md  release.yml
.github/draft-workflows/: build.yml
.github/workflows/: extensive-tests.yml  publish.yml  test.yml  tests.yml
.run/: example_metrics.run.xml  example_simple_logging.run.xml  integration_tests.run.xml  serialization_bench.run.xml  serialization_speed.run.xml  unit_tests.run.xml
benchmarks/: serialization_bench.py  serialization_size.py  serialization_speed.py  shared.py
easytelemetry/: __init__.py  inmemory.py
easytelemetry/appinsights/: __init__.py  protocol.py
examples/: activity.py  bench.py  derived_logging.py  exception_logging.py  inmemory_logging.py  metrics.py  readme.md  shared.py  simple_logging.py  standard_logging.py  timers.py
project/: clean.py  format.py  publish.py  quality.py  sdist.py  tests.py  utils.py
src/: setup.cfg
src/easytelemetry/: __init__.py  inmemory.py  interface.py
src/easytelemetry/appinsights/: impl.py  protocol.py  publisher.py
tests/integration/: appinsights_i_test.py  conftest.py  infra.sh  integration_tests.bicep  readme.md  send_batch_test.py
tests/unit/: appinsights_test.py  conftest.py  conn_str_test.py  protocol_test.py  utils.py
