[metadata]
name = easytelemetry
version = attr: easytelemetry.__version__
description = Telemetry package (logging and metrics) with minimal and opinionated API using Application Insights as back-end.
url = https://github.com/jdvor/easytelemetry
long_description = file: README.md
long_description_content_type = text/markdown
keywords = metrics, logging, telemetry, Application Insights
platform = any
license = MIT
author = Jan Dvorak
author_email = jandvorak.public@gmail.com

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

project_urls =
    Bug Tracker = https://github.com/jdvor/easytelemetry/issues
    Changelog = https://github.com/jdvor/easytelemetry/blob/master/CHANGELOG.md

[options]
packages = find:
python_requires = >=3.8
setup_requires = setuptools
install_requires =
    atomics
    requests
    orjson

[options.package_data]
* = py.typed
